--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {},
